--- a/styles/main.css
+++ b/styles/main.css
@@ -50,7 +50,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
     margin: 0 auto; /* parameter: top right bottom left */
-    width: 800px; /* Parent: 800px */
+    width: 99%; /* Parent: 800px */
     max-width: 960px;
     border: 3px solid #931420; /*parameter: width style color */
     background: #fffded; /* set the entire background color */
@@ -123,6 +123,7 @@ aside {
     width: 215px;
     float: right;
     padding: 0 0 20px 2.083%; /* parameter: top right bottom left(20px) */
+    color: green;
 }
 aside h2 {
     font-size: 130%;
@@ -136,7 +137,6 @@ aside h3 {
 }
 aside img {
     padding: 0 0 1em 0;
-
 }
 
 /* ========== article Selector ==========*/
@@ -182,6 +182,7 @@ main {
 
     }
 }
+/* Media Queries, desktop-first design */
 /* for phone in landscape orientation (767px or less) */
 @media only screen and (max-width: 767px){
     header{
@@ -214,7 +215,13 @@ main {
     *{
         font-size: 90%;
     }
-
+    /* Show the mobile menu */
+    #mobile_menu {
+        display: block;
+    }
+    #nav_menu {
+        display: none;
+    }
 
 }
 /* SlickNav */
@@ -222,10 +229,7 @@ main {
 #mobile_menu {
     display: none;
 }
-/* Show the mobile menu */
-#mobile_menu {
-    display:block;
-}
+
 /* ========== Selectors ==========*/
 /* When focus on the link */
 a:focus {
